# FLAtlas-V2

./: .gitignore  CMakeLists.txt  build.cmd  launch.cmd  migration_to_C++.md
src/: CMakeLists.txt  main.cpp
src/app/: AppConfig.cpp  AppConfig.h  Application.cpp  Application.h  SplashScreen.cpp  SplashScreen.h
src/core/: CMakeLists.txt  Config.cpp  Config.h  EditingContext.cpp  EditingContext.h  I18n.cpp  I18n.h  Logger.cpp  Logger.h  PathUtils.cpp  PathUtils.h  Theme.cpp  Theme.h  UndoManager.cpp  UndoManager.h
src/domain/: BaseData.cpp  BaseData.h  CMakeLists.txt  ModProfile.cpp  ModProfile.h  NpcData.cpp  NpcData.h  SolarObject.cpp  SolarObject.h  SystemDocument.cpp  SystemDocument.h  TradeRoute.cpp  TradeRoute.h  UniverseData.cpp  UniverseData.h  ZoneItem.cpp  ZoneItem.h
src/editors/: CMakeLists.txt
src/editors/base/: BaseBuilder.cpp  BaseBuilder.h  BaseEditorPage.cpp  BaseEditorPage.h  BasePersistence.cpp  BasePersistence.h  RoomEditor.cpp  RoomEditor.h
src/editors/ids/: IdsEditorPage.cpp  IdsEditorPage.h
src/editors/infocard/: InfocardEditor.cpp  InfocardEditor.h
src/editors/ini/: IniCodeEditor.cpp  IniCodeEditor.h  IniEditorPage.cpp  IniEditorPage.h  IniFindReplaceDialog.cpp  IniFindReplaceDialog.h  IniMiniMap.cpp  IniMiniMap.h  IniSyntaxHighlighter.cpp  IniSyntaxHighlighter.h
src/editors/jump/: JumpConnectionDialog.cpp  JumpConnectionDialog.h
src/editors/modmanager/: ConflictDetector.cpp  ConflictDetector.h  ModManagerPage.cpp  ModManagerPage.h  ModWorkflow.cpp  ModWorkflow.h
src/editors/news/: NewsRumorEditor.cpp  NewsRumorEditor.h
src/editors/npc/: MbaseOperations.cpp  MbaseOperations.h  NpcEditorPage.cpp  NpcEditorPage.h
src/editors/system/: BaseEditDialog.cpp  BaseEditDialog.h  BaseEditService.cpp  BaseEditService.h  CreateExclusionZoneDialog.cpp  CreateExclusionZoneDialog.h  CreateFieldZoneDialog.cpp  CreateFieldZoneDialog.h  CreateObjectDialog.cpp  CreateObjectDialog.h  DockingRingCreationService.cpp  DockingRingCreationService.h  DockingRingDialog.cpp  DockingRingDialog.h  ExclusionZoneUtils.cpp  ExclusionZoneUtils.h  JumpConnectionService.cpp  JumpConnectionService.h  PlanetCreationService.cpp  PlanetCreationService.h  RingEditService.cpp  RingEditService.h  SystemCreationDialogs.cpp  SystemCreationDialogs.h  SystemCreationWizard.cpp  SystemCreationWizard.h  SystemDisplayFilterDialog.cpp  SystemDisplayFilterDialog.h  SystemEditorPage.cpp  SystemEditorPage.h  SystemPersistence.cpp  SystemPersistence.h  SystemSettingsDialog.cpp  SystemSettingsDialog.h  SystemSettingsService.cpp  SystemSettingsService.h  SystemUndoCommands.h  TradeLaneEditService.cpp  TradeLaneEditService.h
src/editors/trade/: MarketScanner.cpp  MarketScanner.h  TradeRouteDataService.cpp  TradeRouteDataService.h  TradeRoutePage.cpp  TradeRoutePage.h  TradeScoring.cpp  TradeScoring.h
src/editors/universe/: DeleteSystemDialog.cpp  DeleteSystemDialog.h  DeleteSystemService.cpp  DeleteSystemService.h  EditSystemDialog.cpp  EditSystemDialog.h  NewSystemDialog.cpp  NewSystemDialog.h  NewSystemService.cpp  NewSystemService.h  UniverseEditorPage.cpp  UniverseEditorPage.h  UniverseSerializer.cpp  UniverseSerializer.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/freelancer/: FreelancerMaterialResolver.cpp  FreelancerMaterialResolver.h  FreelancerPaths.cpp  FreelancerPaths.h  IdsDataService.cpp  IdsDataService.h  IdsStringTable.cpp  IdsStringTable.h  ModelAssetScanner.cpp  ModelAssetScanner.h  ResourceDllWriter.cpp  ResourceDllWriter.h  UniverseScanner.cpp  UniverseScanner.h
src/infrastructure/io/: CmpLoader.cpp  CmpLoader.h  CsvImporter.cpp  CsvImporter.h  DebugCapture.cpp  DebugCapture.h  DllResources.cpp  DllResources.h  PeVersionInfo.cpp  PeVersionInfo.h  TextureLoader.cpp  TextureLoader.h  VmeshDecoder.cpp  VmeshDecoder.h
src/infrastructure/net/: DownloadManager.cpp  DownloadManager.h
src/infrastructure/parser/: BiniConverter.cpp  BiniConverter.h  BiniDecoder.cpp  BiniDecoder.h  IniAnalysisService.cpp  IniAnalysisService.h  IniParser.cpp  IniParser.h  XmlInfocard.cpp  XmlInfocard.h
src/infrastructure/updater/: AutoUpdater.cpp  AutoUpdater.h
src/rendering/: CMakeLists.txt
src/rendering/flight/: Autopilot.cpp  Autopilot.h  DustParticles.cpp  DustParticles.h  FlightCamera.cpp  FlightCamera.h  (+6 more)
src/tools/: CMakeLists.txt  HelpBrowser.cpp  HelpBrowser.h  KeyboardShortcutOverviewDialog.cpp  KeyboardShortcutOverviewDialog.h  ModelScreenshotExporter.cpp  ModelScreenshotExporter.h  PathFinderDialog.cpp  PathFinderDialog.h  ScriptPatcher.cpp  ScriptPatcher.h  ShortestPathGenerator.cpp  ShortestPathGenerator.h  SpStarter.cpp  SpStarter.h  UpdateChecker.cpp  UpdateChecker.h  UpdateDownloader.cpp  UpdateDownloader.h  UpdateInstaller.cpp  UpdateInstaller.h  model_screenshot_export_main.cpp
src/ui/: BrowserPanel.cpp  BrowserPanel.h  CMakeLists.txt  CenterTabWidget.cpp  CenterTabWidget.h  MainWindow.cpp  MainWindow.h  PropertiesPanel.cpp  PropertiesPanel.h  SettingsDialog.cpp  SettingsDialog.h  StatusBarManager.cpp  StatusBarManager.h  WelcomePage.cpp  WelcomePage.h
tests/: CMakeLists.txt  test_AppConfig.cpp  test_BarbicanStationDeckPreviewBinding.cpp  test_BaseEditService.cpp  test_BaseEditor.cpp  test_BiniConverter.cpp  test_BiniDecoder.cpp  test_CmpLoader.cpp  test_Config.cpp  test_CsvImporter.cpp  test_DeleteSystemService.cpp  test_DockableSolarModel.cpp  test_DomainModels.cpp  test_EditingContext.cpp  test_ExclusionZoneUtils.cpp  test_ExeHandling.cpp  test_FamilySolarModel.cpp  test_FlightMode.cpp  test_HelpBrowser.cpp  test_HokkaidoCityscapeModel.cpp  test_I18n.cpp  test_IdsDataService.cpp  test_IdsEditorPage.cpp  test_IdsStringTable.cpp  test_InfocardEditor.cpp  test_IniAnalysisService.cpp  test_IniEditorPage.cpp  test_IniParser.cpp  test_IniSyntaxHighlighter.cpp  test_JumpConnection.cpp  test_LibertyBattleshipDeckPreviewBinding.cpp  test_Logger.cpp  test_MarketScanner.cpp  test_ModManager.cpp  test_ModelCache.cpp  test_ModelPreview.cpp  test_ModelScreenshotExporter.cpp  test_ModelViewerPageTradeLane.cpp  test_NewsRumorEditor.cpp  test_NpcEditor.cpp  (+26 more)
(+53 files in other folders)
